data/derived/fa15/progs/unify/prog1759.ml.out
Characters 95-101:
  |x when x>=10->(x/10)@((x mod 10)+(List.hd (mulByDigit i t)))
                 ^^^^^^
Error: This expression has type int but an expression was expected of type
         'a list
